# deep_studio

./: .gitignore  pyproject.toml  pytest.ini  readme.md
.github/workflows/: ci.yml
deep_studio/: __init__.py
deep_studio/common_layer/: config.py  registry.py  types.py
deep_studio/data_layer/: __init__.py  data_registry.py  dataloader.py  dataloader_interface.py
deep_studio/exp_layer/: __init__.py  experiment.py  runner.py
deep_studio/model_layer/: __init__.py  model_interface.py  model_registry.py
deep_studio/model_layer/model/: __init__.py  conv2d.py  resnet.py
playground/2024-dacon-image-reconstruction/: __init__.py  dataset.py  exp-config.py  readme.md  train.py
playground/2024-dacon-image-reconstruction/configs/: default_config.py  resnet18_config.py  second_model_config.py
playground/2024-dacon-image-reconstruction/models/: __init__.py  model_interface.py  resnet18_model.py  sample_model.py  second_model.py
source/: conf.py  index.rst
test/common_layer/: test_registry.py
test/exp_layer/: test_experiment.py
