[tool.poetry]
name = "deep-studio"
version = "0.1.0"
description = ""
authors = ["sangwon lee <leeh8911@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.4"
sphinx = "^8.1.3"
numpy = "^2.1.3"
flake8 = "^7.1.1"
pyyaml = "^6.0.2"
scikit-learn = "^1.6.0"
tqdm = "^4.67.1"

# Windows용 (CUDA 버전)
torch = { version = "^2.5.1+cu124", source = "pytorch-cu124", markers = "sys_platform == 'win32'" }
torchvision = { version = "^0.20.1+cu124", source = "pytorch-cu124", markers = "sys_platform == 'win32'" }
torchaudio = { version = "^2.5.1+cu124", source = "pytorch-cu124", markers = "sys_platform == 'win32'" }

# macOS용 (CPU + MPS 버전)
torch = { version = "^2.5.1", markers = "sys_platform == 'darwin'" }
torchvision = { version = "^0.20.1", markers = "sys_platform == 'darwin'" }
torchaudio = { version = "^2.5.1", markers = "sys_platform == 'darwin'" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
